c/src/test/resources/c/nec_bnc/valid/ex15.ctrl
<controlFile>
  <sourceFile name="../ex15.c" id="1" />
  <run>
    <startPosition fileId="1" line="14" />
    <wayPoint fileId="1" line="31" >
      <command>
        <cascadeFunction> cascade_check </cascadeFunction>
        <argument><![CDATA[
          *(B.b) >= *(A.a)
        ]]>
        </argument>
      </command>
    </wayPoint>
    <endPosition fileId="1" line="32" />
  </run>
</controlFile>